<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">Gamma Ray Detection</string>
   <string name="action_settings">Settings</string>
   <string name="Start">Start</string>
   <string name="Stop">Pause</string>
   <string name="threshold_hint">55</string>
   <string name="number_hint">50</string>
   <string name="comb_hint">10</string>
   <string name="pic_txt">Number of pictures:</string>
   <string name="cmb_pic_txt">Frequency of combination:</string>
   <string name="thres_txt">Threshold:</string>
   <string name="histo_txt">Save as an histogram</string>

</resources>