<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingLeft="10dp"
   android:paddingRight="10dp"
   android:orientation="vertical" >
   
   <FrameLayout
      android:id="@+id/camera_preview"
      android:layout_height="1dp"
      android:layout_width="1dp" />
   
   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <TextView
         android:text="@string/pic_txt"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:textIsSelectable="false"
         android:clickable="false" />
      <EditText
         android:id="@+id/pic_no"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/number_hint"
         android:inputType="number" />
   </LinearLayout>

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <TextView
         android:text="@string/cmb_pic_txt"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:textIsSelectable="false"
         android:clickable="false" />
      <EditText
         android:id="@+id/cmb_no"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/comb_hint"
         android:inputType="number" />
   </LinearLayout>

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <TextView
         android:text="@string/thres_txt"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:textIsSelectable="false"
         android:clickable="false" />
      <EditText
         android:id="@+id/threshold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/threshold_hint"
         android:inputType="number" />
   </LinearLayout>

   <CheckBox 
      android:id="@+id/histo_mode"
      android:checked="false"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/histo_txt" />

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <Button
         android:id="@+id/button_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:onClick="StartIt"
         android:text="@string/Start" />
      <Button
         android:id="@+id/button_stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"   
         android:onClick="StopIt"
         android:text="@string/Stop" />
   </LinearLayout>
   
   <TextView
      android:id="@+id/outText"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:textIsSelectable="false"
      android:clickable="false" />
</LinearLayout>